--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ body {
   flex-direction: column;
   background-color: var(--primary-dark);
   color: var(--primary-light);
+  
 }
 
 #header {
@@ -32,18 +33,33 @@ body {
 
 #main {
   display:flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
+  padding: 10px;
+  align-self: stretch;
+  gap: 20px;
+}
+
+#options {
+  display: flex;
 }
 
 #grid {
   display: flex;
-  align-items: center;
-  justify-content: center;
   border: 5px;
   border-style: solid;
-  width: 400px;
-  height: 400px;
+  border-color: var(--secondary-dark);
+  flex-wrap: wrap;
+  width: 500px;
+  height: 500px;
+}
+
+@media (max-width: 550px) {
+  #grid {
+    width: 300px;
+    height: 300px;
+  }
 }
 
 
